--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,23 @@
-title: no style, please! # name of the site
-author: Riccardo Graziosi # name of site's author
-email: riccardo.graziosi97@gmail.com # email of site's author
-url: https://riggraz.dev # root address of the site
-baseurl: "/no-style-please" # subpath of the site, e.g. "/blog" (leave it blank "" if you're site shouldn't use a subpath)
+title: Yuwen's Project Collection # name of the site
+author: Liao Yuwen # name of site's author
+email: m180139@e.ntu.edu.sg # email of site's author
+url: https://centilinda.github.io/portfolio # root address of the site
+#baseurl: "/project-collection" # subpath of the site, e.g. "/blog" (leave it blank "" if you're site shouldn't use a subpath)
 description: > # description of the site (multiple lines allowed)
-  A (nearly) no-CSS, fast, minimalist Jekyll theme.
+  A collection of engineering projects I've done since 2019.
 
 permalink: /:slug.html
 
-favicon: "logo.png" # name+extension of favicon (which must be put on the root folder)
+favicon: "favicon.png" # name+extension of favicon (which must be put on the root folder)
 # goat_counter: "yoursitename" # put your GoatCounter name if you want to use GoatCounter analytics
 
-theme: no-style-please # if you are using GitHub Pages, change it to remote_theme: riggraz/no-style-please
+remote_theme: riggraz/no-style-please # if you are using GitHub Pages, change it to remote_theme: riggraz/no-style-please
+#theme: no-style-please
 
 theme_config:
-  appearance: "auto" # can be "light", "dark" or "auto"
-  back_home_text: ".." # customize text for homepage link in post layout
-  date_format: "%Y-%m-%d" # customize how date is formatted
+  appearance: "light" # can be "light", "dark" or "auto"
+  back_home_text: "home" # customize text for homepage link in post layout
+  date_format: "%Y-%m" # customize how date is formatted
   show_description: false # show blog description in home page
 
 sass:
