--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -2,37 +2,17 @@
 # https://github.com/riggraz/no-style-please#customize-the-menu
 
 entries:
-  - title: info
+  - title: Info
     entries:
-      - title: a (nearly) no-CSS, fast, minimalist Jekyll theme.
-      - title: github repo
-        url: https://github.com/riggraz/no-style-please
-      - title: "used by <a href='https://riggraz.dev'>riggraz.dev</a> and <a href='https://github.com/riggraz/no-style-please/network/dependents'>many others</a>"
+      - title: About
+        url: about
+      - title: "Email: m180139@e.ntu.edu.sg"
+      - title: LinkedIn
+        url: https://www.linkedin.com/in/yuwen-liao-b12534170
 
-  - title: all posts
+  - title: Projects
     post_list:
-      limit: 5
-      show_more: true
-      show_more_text: See archive...
+      limit: 20
+      show_more: false
+      show_more_text: See more...
       show_more_url: archive.html
-
-  - title: posts by category
-    post_list:
-      category: example2
-      show_more: true
-      show_more_text: See more posts...
-      show_more_url: example2-archive.html
-
-  - title: rss
-    url: feed.xml
-  
-  - title: another list
-    entries:
-      - title: with subitems
-        entries:
-          - title: with subsubitems
-          - title: example page
-            url: about
-  - title: PRO TIP
-    entries:
-      - title: to edit this menu, edit _data/menu.yml file
